--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,12 +10,11 @@ logging.pattern.console=%d{HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n
 
 # Development Settings
 spring.profiles.active=dev
-
 # ==================== DATABASE CONFIGURATION ====================
 # PostgreSQL Database Settings
 spring.datasource.url=jdbc:postgresql://localhost:5432/wac_corporal_db
-spring.datasource.username=postgres
-spring.datasource.password=your_password_here
+spring.datasource.username=furkan
+spring.datasource.password=123456
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Connection Pool Settings
@@ -30,6 +29,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+
 # Hibernate Settings
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
@@ -41,7 +41,8 @@ spring.security.user.password=123456
 
 # ==================== FIREBASE CONFIGURATION ====================
 # Firebase Service Account Path (Firebase kullanacaksan?z)
-# firebase.config.path=path/to/your/firebase-service-account.json
+firebase.credentials.path=firebase_token.json
+# This is essential for Firebase
 
 # ==================== LOGGING CONFIGURATION ====================
 # Database SQL Loglar?
