WacCorporal UserRepository Interface

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,17 +35,17 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 
 # ==================== SECURITY CONFIGURATION ====================
-# Temporary Password (Geli?tirme için)
+# Temporary Password (For development)
 spring.security.user.name=admin
 spring.security.user.password=123456
 
 # ==================== FIREBASE CONFIGURATION ====================
-# Firebase Service Account Path (Firebase kullanacaksan?z)
+# Firebase Service Account Path (If you will use Firebase)
 firebase.credentials.path=firebase_token.json
 # This is essential for Firebase
 
 # ==================== LOGGING CONFIGURATION ====================
-# Database SQL Loglar?
+# Database SQL Logs
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.org.springframework.web=DEBUG
@@ -56,16 +56,16 @@ spring.devtools.restart.enabled=true
 spring.devtools.livereload.enabled=true
 
 # ==================== CLOUD DATABASE EXAMPLES ====================
-# Railway PostgreSQL (Örnek - Kullanacaksan?z üstteki local Settings comment yap?n)
+# Railway PostgreSQL (Example - Comment out the local settings above if you use this)
 # spring.datasource.url=jdbc:postgresql://containers-us-west-xxx.railway.app:5432/railway
 # spring.datasource.username=postgres
 # spring.datasource.password=your_generated_password
 
-# ElephantSQL (Örnek - Kullanacaksan?z üstteki local Settings comment yap?n)
+# ElephantSQL (Example - Comment out the local settings above if you use this)
 # spring.datasource.url=jdbc:postgresql://kashin.db.elephantsql.com:5432/your_db_name
 # spring.datasource.username=your_username
 # spring.datasource.password=your_password
 
 # ==================== REMOVED TEMPORARY SETTINGS ====================
-# Art?k bu ayarlar gerekli de?il - Database aktif
+# These settings are no longer needed - Database is active
 # spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
